# CXX_difficult_moments

./: README.md
src/: CMakeLists.txt  CXX_difficult_moments.pro  conanfile.txt  functions.cpp  functions.h  home.cpp  home.h  main.cpp  matrix.hpp  person.h  phone_book.cpp  phone_book.h  phone_number.h  range.h  range.hpp  studentsgroup.cpp  studentsgroup.pb.h  studentsgroup.proto  timer.h
src/homework_project/: CMakeLists.txt  car.proto  functions.cpp  functions.h  home.cpp  main.cpp  matrix.h  person.h  phone_book.cpp  phone_book.h  phone_number.h  studentsgroup.cpp  studentsgroup.h  studentsgroup.pb.cc  studentsgroup.pb.h  tests.cpp
src/protobuf_build/: conanbuildinfo.cmake  conanbuildinfo.pri  conanbuildinfo.txt  conaninfo.txt
src/tests/: CMakeLists.txt
